--- a/backend/.env
+++ b/backend/.env
@@ -1,68 +1,55 @@
-# Server Configuration
+# ChatApp Backend Environment Configuration
+# AWS Server: 3.111.208.77
+
+NODE_ENV=production
 PORT=3000
-NODE_ENV=development
-HOST=localhost
+HOST=0.0.0.0
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/chatapp
-MONGODB_TEST_URI=mongodb://localhost:27017/chatapp_test
+# Database
+MONGODB_URI=mongodb://localhost:27017/chatapp_production
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
+# JWT Secret (IMPORTANT: Change this in production)
+JWT_SECRET=chatapp-super-secure-jwt-secret-key-2024-production
 
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here_development_only
-JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=your_refresh_token_secret_here_development_only
-JWT_REFRESH_EXPIRES_IN=30d
+# Server Configuration
+FRONTEND_URL=http://3.111.208.77:3000
+SERVER_IP=3.111.208.77
 
-# Encryption
-ENCRYPTION_KEY=development_key_32_chars_long_12
-
-# Twilio Configuration (for SMS OTP) - Add your credentials
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
+# Twilio Configuration (for SMS OTP)
+# Sign up at https://www.twilio.com/console
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
 TWILIO_PHONE_NUMBER=+1234567890
 
-# Email Configuration (NodeMailer) - Add your credentials
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_password
+# Cloudinary Configuration (for media uploads)
+# Sign up at https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
 
-# Cloudinary Configuration (for file uploads) - Add your credentials
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
-
-# AWS Configuration - Add your credentials if using AWS
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-AWS_REGION=us-east-1
-AWS_S3_BUCKET=your_s3_bucket_name
+# Redis Configuration (optional)
+REDIS_URL=redis://localhost:6379
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
-
-# Socket.IO Configuration
-SOCKET_CORS_ORIGIN=*
-SOCKET_PING_TIMEOUT=60000
-SOCKET_PING_INTERVAL=25000
-
-# Security
-BCRYPT_ROUNDS=12
-MAX_LOGIN_ATTEMPTS=5
-LOCKOUT_TIME=1800000
-
-# File Upload Limits
+# File Upload
 MAX_FILE_SIZE=10485760
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,video/mp4,audio/mpeg
+UPLOAD_PATH=/var/www/chatapp/uploads
 
 # Logging
 LOG_LEVEL=info
-LOG_FILE=logs/app.log
+LOG_FILE=/var/www/chatapp/logs/app.log
+
+# CORS
+CORS_ORIGIN=*
+
+# Security
+BCRYPT_ROUNDS=12
+
+# Features (enable/disable)
+ENABLE_STORIES=true
+ENABLE_CALLS=true
+ENABLE_GROUPS=true
+ENABLE_FILE_SHARING=true
