--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chatapp-backend",
+  "name": "chatapp-backend-complete",
   "version": "1.0.0",
-  "description": "Real-time chat backend with Node.js, Socket.IO, and MongoDB",
+  "description": "Complete real-time chat server with all features",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,7 +14,10 @@
     "socket.io",
     "nodejs",
     "mongodb",
-    "express"
+    "express",
+    "calling",
+    "stories",
+    "file-sharing"
   ],
   "author": "ChatApp Team",
   "license": "MIT",
@@ -32,22 +35,21 @@
     "express-validator": "^7.0.1",
     "dotenv": "^16.3.1",
     "twilio": "^4.15.0",
-    "nodemailer": "^6.9.4",
-    "redis": "^4.6.8",
     "compression": "^1.7.4",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0",
     "moment": "^2.29.4",
-    "sharp": "^0.32.5",
     "node-cron": "^3.0.2",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "jimp": "^0.22.10",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "jest": "^29.6.4",
-    "supertest": "^6.3.3"
+    "jest": "^29.6.4"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
